widget: Fix a memory leak in set_colors

https://bugzilla.gnome.org/show_bug.cgi?id=768994
(cherry picked from commit be0ae73fe58b9a3b37a0ca9568ac5999416552a2)